Fix button align issue, close #7001

--- a/components/button/style/mixin.less
+++ b/components/button/style/mixin.less
@@ -147,7 +147,7 @@
   background-image: none;
   border: @border-width-base @border-style-base transparent;
   white-space: nowrap;
-  line-height: @line-height-base;
+  line-height: 1;
   .button-size(@btn-height-base; @btn-padding-base; @font-size-base; @btn-border-radius-base);
   user-select: none;
   transition: all .3s @ease-in-out;
